# pa036-database-project

./: .clang-format  .gitignore  10000.json  CMakeLists.txt  PostgresQueries.h  main.cpp  queries
headers/: ChronoWrapper.h  DatabaseBase.h  FileParser.h  JsonData.h  MongoDatabase.h  PostgresqlDatabase.h
src/: ChronoWrapper.cpp  FileParser.cpp  MongoDatabase.cpp  PostgresqlDatabase.cpp
